--- a/css/home.css
+++ b/css/home.css
@@ -26,7 +26,7 @@
     padding: 1rem;
 }
 
-.referencias {
+.links {
     font-weight: 600;
     color: var(--corTexto);
     text-decoration: none;
@@ -54,6 +54,10 @@
 
     .introducao__img {
         width: 60%;
+    }
+
+    .imagem_topicos {
+        width: 80%;
     }
 }
 
